# django-sendmail-backend

./: .gitignore  README.rst  pyproject.toml  setup.cfg
sendmail/: __init__.py
