[metadata]
name = django-sendmail-backend
description = django sendmail email backend
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/chris-mcdo/django-sendmail-backend
author = Christopher McDonald
author_email = cmcdonal33@gmail.com
license = MIT
license_file = LICENSE
platforms = win32, linux, osx
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4
    Framework :: Django :: 4.0
keywords = django, mail, email, backend, smtp, agent
project_urls =
     Source = https://github.com/chris-mcdo/django-sendmail-backend
     Tracker = https://github.com/chris-mcdo/django-sendmail-backend/issues

[options]
python_requires = >=3.5
packages = find:
install_requires = 
    sysexits>=0.2.0
    Django>=1.4
zip_safe = False

[flake8]
max-line-length = 88
extend-ignore = E203

[tool.isort]
profile = "black"
